--- a/pr12/MainWindow.xaml
+++ b/pr12/MainWindow.xaml
@@ -5,8 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:pr12"
         mc:Ignorable="d"
-        Title="Практическая работа №12" Height="400" Width="800" FontSize="20" ResizeMode="CanMinimize" Loaded="Window_Loaded">
+        Title="Практическая работа №12" Height="400" Width="800" FontSize="20" ResizeMode="CanMinimize" Loaded="Window_Loaded" Icon="/WEBPAGE.ICO">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="0.6*"/>
@@ -14,7 +18,7 @@
             <RowDefinition Height="1.5*"/>
         </Grid.RowDefinitions>
 
-        <Menu VerticalAlignment="Top">
+        <Menu VerticalAlignment="Center" Grid.ColumnSpan="2">
             <MenuItem Header="Файл">
                 <MenuItem Header="Выход" Click="btnExit_Click"/>
             </MenuItem>
@@ -29,7 +33,7 @@
             </MenuItem>
         </Menu>
 
-        <StatusBar VerticalAlignment="Bottom" Grid.Row="2">
+        <StatusBar VerticalAlignment="Bottom" Grid.Row="2" Grid.ColumnSpan="2">
             <TextBlock x:Name="tbNumber" Text=""/>
             <Separator/>
             <TextBlock x:Name="tbTime" Text=""/>
@@ -37,9 +41,9 @@
             <TextBlock x:Name="tbDate" Text=""/>
         </StatusBar>
 
-        <TabControl Grid.Row="1"
+        <TabControl
                     SelectionChanged="TabControl_SelectionChanged"
-                    x:Name="mainTabControl">
+                    x:Name="mainTabControl" Grid.ColumnSpan="2" Margin="0,19,0,0" Grid.RowSpan="2">
 
             <TabItem Header="Задание 1">
                 <Grid>
@@ -56,11 +60,11 @@
                         </Grid.RowDefinitions>
 
                         <Label Content="Исходные данные: "/>
-                        
+
                         <Label VerticalAlignment="Bottom"
                                HorizontalAlignment="Left"
                                Content="Число 1:"/>
-                        
+
                         <Label VerticalAlignment="Bottom"
                                HorizontalAlignment="Right"
                                Content="Число 2:"/>
@@ -88,8 +92,8 @@
                                    Foreground="Red" 
                                    FontStyle="Italic"
                                    x:Name="tbWarning1"/>
-                        
-                        
+
+
                     </Grid>
 
                     <Grid Grid.Column="1">
@@ -116,7 +120,7 @@
                             <MenuItem Header="Посмотреть результат" Click="btnResult1_Click"/>
                         </ContextMenu>
                     </Grid.ContextMenu>
-                    
+
                 </Grid>
             </TabItem>
 
@@ -220,7 +224,7 @@
                         ToolTip="Посмотреть информацию о программе">
                         <Image Source="Images\Info.png"/>
                     </Button>
-                    
+
                 </Grid>
             </TabItem>
 
